attempt to fix stretching issue with main image

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,15 +7,19 @@ body {
   flex-wrap: wrap;
   width: 100%;
   #top {
-
-    // background-image: url('../img/img1.jpg');
-    img {
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      width:100%;
-      height: 600px;
-    }
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width:100%;
+    height: 600px;
+    background-image: url('../img/img1.jpg');
+    // img {
+    //   background-repeat: no-repeat;
+    //   background-position: center;
+    //   background-size: cover;
+    //   width:100%;
+    //   height: 600px;
+    // }
     h1 {
       float: right;
       background-color: rgba(255, 255, 255, 0.5);
@@ -28,7 +32,7 @@ body {
   #bottom {
     width: 100%;
     height: 700px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.2);
     .row {
       width: 100%;
       .col {
@@ -49,11 +53,6 @@ body {
 
 @media screen and (min-width: 1190px) {
   #top {
-    width: 100%;
-    background-position: center;
-    background-size: auto;
-    img {
-      // width: 100%;
-    }
+    background-position: top;
   }
 }
